--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sorteador-de-numeros",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,21 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/stack": "^6.3.17",
-    "expo": "~48.0.18",
-    "expo-build-properties": "~0.6.0",
-    "expo-status-bar": "~1.4.4",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "expo": "~51.0.39",
+    "expo-build-properties": "~0.12.5",
+    "expo-dev-client": "~4.0.29",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.71.14",
-    "react-native-dropdown-select-list": "^2.0.4",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-google-mobile-ads": "^12.11.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "expo-dev-client": "~2.2.1"
+    "react-native": "0.74.5",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-mobile-ads": "^13.6.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
